<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".DetailFragment">
    <TextView
        style="@style/Card_header_Text"
        android:text="@string/Card_header_Text"
        android:id="@+id/CardText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <TextView
        style="@style/Card_TextView"
        android:text="@string/Name"
        android:id="@+id/name_header"
        app:layout_constraintTop_toBottomOf="@id/CardText"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        style="@style/Editbox"
        android:id="@+id/editname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/name_header"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <TextView
        style="@style/Card_TextView"
        android:id="@+id/email_header"
        android:text="@string/Email"
        app:layout_constraintTop_toBottomOf="@id/editname"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        style="@style/Editbox"
        android:id="@+id/editemail"
        app:layout_constraintTop_toBottomOf="@id/email_header"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        style="@style/Card_TextView"
        android:id="@+id/gender_header"
        android:text="@string/Gender"
        app:layout_constraintTop_toBottomOf="@id/editemail"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        style="@style/Editbox"
        android:id="@+id/editgender"
        app:layout_constraintTop_toBottomOf="@id/gender_header"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        style="@style/Card_TextView"
        android:id="@+id/status_header"
        android:text="@string/Status"
        app:layout_constraintTop_toBottomOf="@id/editgender"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        style="@style/Editbox"
        android:id="@+id/editstatus"
        app:layout_constraintTop_toBottomOf="@id/status_header"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        style="@style/Button"
        android:text="@string/Submit"
        android:id="@+id/submit"
        app:layout_constraintTop_toBottomOf="@id/editstatus"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>