<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>

    </data>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".PostFragment">
    <TextView
        style="@style/Card_header_Text"
        android:text="@string/enter_details"
        android:id="@+id/CardText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <TextView
        style="@style/Card_TextView"
        android:text="@string/Name"
        android:id="@+id/name_header"
        app:layout_constraintTop_toBottomOf="@id/CardText"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        style="@style/Editbox"
        android:id="@+id/newname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/name_header"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <TextView
        style="@style/Card_TextView"
        android:id="@+id/email_header"
        android:text="@string/Email"
        app:layout_constraintTop_toBottomOf="@id/newname"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        style="@style/Editbox"
        android:id="@+id/newemail"
        app:layout_constraintTop_toBottomOf="@id/email_header"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        style="@style/Card_TextView"
        android:id="@+id/gender_header"
        android:text="@string/Gender"
        app:layout_constraintTop_toBottomOf="@id/newemail"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        style="@style/Editbox"
        android:id="@+id/newgender"
        app:layout_constraintTop_toBottomOf="@id/gender_header"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        style="@style/Card_TextView"
        android:id="@+id/status_header"
        android:text="@string/Status"
        app:layout_constraintTop_toBottomOf="@id/newgender"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        style="@style/Editbox"
        android:id="@+id/newstatus"
        app:layout_constraintTop_toBottomOf="@id/status_header"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        app:layout_constraintTop_toBottomOf="@id/newstatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal"
        >
        <Button
            android:layout_weight="1"
            style="@style/Button"
            android:text="@string/cancel"
            android:id="@+id/cancelbtn"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:layout_weight="1"
            style="@style/Button"
            android:text="@string/Submit"
            android:id="@+id/submitbtn"
            app:layout_constraintTop_toBottomOf="@id/newstatus"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/></LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>