<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="card"
            type="com.example.navigation.model.Data" />
        <variable
            name="adapter"
            type="com.example.navigation.MyAdapter" />
    </data>

    <androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/cardTopmargin"
        android:layout_marginBottom="@dimen/CardBottomMargin"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/CardRadius"
        app:cardElevation="@dimen/CardElevation"
        android:layout_marginLeft="@dimen/CardBottomMargin"
        android:layout_marginRight="@dimen/CardBottomMargin"
        android:id="@+id/user_card"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <ImageView
                android:id="@+id/icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ImgTopMargin"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/icon" />

            <ImageButton
                android:id="@+id/delete"
                android:layout_marginTop="4dp"
                android:layout_marginRight="4dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:background="@drawable/close_button"
                android:layout_width="wrap_content"
                android:src="@drawable/close"
                android:layout_height="wrap_content"
                android:contentDescription="@string/delete_user" />

            <TextView
                android:id="@+id/namefield"
                style="@style/TextViewStyle"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="@id/icon"
                android:text="@string/Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/idfield"
                style="@style/TextViewStyle"
                app:layout_constraintTop_toBottomOf="@+id/namefield"
                app:layout_constraintLeft_toRightOf="@id/icon"
                android:text="@string/Id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/genderfield"
                style="@style/TextViewStyle"
                app:layout_constraintTop_toBottomOf="@+id/email"
                app:layout_constraintLeft_toRightOf="@id/icon"
                android:text="@string/Gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/statusfield"
                style="@style/TextViewStyle"
                app:layout_constraintTop_toBottomOf="@+id/genderfield"
                app:layout_constraintLeft_toRightOf="@id/icon"
                android:text="@string/Status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/Createfield"
                style="@style/TextViewStyle"
                app:layout_constraintTop_toBottomOf="@+id/statusfield"
                app:layout_constraintLeft_toRightOf="@id/icon"
                android:text="@string/Create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/updatefield"
                style="@style/TextViewStyle"
                app:layout_constraintTop_toBottomOf="@+id/Createfield"
                app:layout_constraintLeft_toRightOf="@id/icon"
                android:text="@string/Update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/name"
                style="@style/TextViewStyle"
                android:text="@{card.name}"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/namefield"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                app:layout_constraintTop_toBottomOf="@+id/name"
                app:layout_constraintLeft_toRightOf="@+id/idfield"
                android:id="@+id/uid"
                android:text="@{card.id}"
                style="@style/TextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                style="@style/TextViewStyle"
                android:text="@{card.email}"
                app:layout_constraintTop_toBottomOf="@+id/uid"
                app:layout_constraintLeft_toRightOf="@+id/icon"
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                style="@style/TextViewStyle"
                android:text="@{card.gender}"
                app:layout_constraintTop_toBottomOf="@+id/email"
                app:layout_constraintLeft_toRightOf="@+id/genderfield"
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                style="@style/TextViewStyle"
                android:id="@+id/status"
                android:text="@{card.status}"
                app:layout_constraintTop_toBottomOf="@id/gender"
                app:layout_constraintLeft_toRightOf="@id/statusfield"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                style="@style/TextViewStyle"
                android:id="@+id/createdAt"
                android:text="@{card.createdAt}"
                app:layout_constraintTop_toBottomOf="@id/status"
                app:layout_constraintLeft_toRightOf="@id/Createfield"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                style="@style/TextViewStyle"
                android:id="@+id/updatedAt"
                android:text="@{card.updatedAt}"
                app:layout_constraintTop_toBottomOf="@id/createdAt"
                app:layout_constraintLeft_toRightOf="@id/updatefield"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>
